--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -79,7 +79,7 @@ select {
 
 .project {
   display: flex;
-  margin-left: 5px;
+  margin: 10px;
   padding: 2px;
   border: 1px solid #000000;
   border-radius: 5px;
@@ -138,4 +138,15 @@ select {
 
 .button-fill-all {
   margin-left: 10px;
+}
+
+
+.removeProject {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: -15px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
 }
