--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-canvas></app-canvas>
+<div class="main_wrapper">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
