--- a/src/app/circle/circle.component.css
+++ b/src/app/circle/circle.component.css
@@ -1,4 +1,4 @@
-.circle-wrapper {
+/* .circle-wrapper {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -20,4 +20,4 @@
 .circle-wrapper {
   margin-left: 5px;
   margin-bottom: 5px;
-}
+} */
