--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,4 +1,4 @@
-.canvas-component {
+/* .canvas-component {
   display: flex;
   align-items: flex-start;
   margin: auto 100px;
@@ -150,4 +150,4 @@ select {
   border-radius: 50%;
   width: 20px;
   height: 20px;
-}
+} */
