--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,5 +1,5 @@
 <div class="canvas-component">
-  <div class="controls-panel">
+  <div class="controls-panel" style='flex-direction:column'>
     <select class="size-selector"
             [(ngModel)]="selectedSize"
             (change)="onSizeSelect()"
