--- a/src/app/registration/registration.component.css
+++ b/src/app/registration/registration.component.css
@@ -1,4 +1,4 @@
-.mainWrapper {
+/* .mainWrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,4 +60,4 @@ button:active {
     transform: translateY(4px);
     box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
     border-bottom: none;
-}
+} */
