--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,4 +1,4 @@
-.welcome {
+/* .welcome {
     width: 100%;
     height: 90vh;
     display: flex;
@@ -10,4 +10,4 @@ span {
     width: 40%;
     font-size: 40px;
     font-family: inherit;
-}
+} */
