--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
-/* You can add global styles to this file, and also import other style files
+/* You can add global styles to this file, and also import other style files */
 body {
     background: rgb(192,191,212);
     background: linear-gradient(90deg, rgba(192,191,212,1) 0%, rgba(255,255,255,1) 44%, rgba(183,214,221,1) 100%);
-} */
+}
