--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="btn">
-            <button [disabled]='userSignUp.invalid'>Sign up</button>
+            <button>Sign up</button>
             <button [routerLink]='["/"]'>Cancel</button>
         </div>
     </form>
